--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         <div class="game-info">
             <h1 class="title">How to play?</h1>
             <h3 class="help-text">Try to guess the pokémon displayed in the blurred card. For each try, the blur will be a little vanished.        </h3>
-            <button class="play" href="game.html">Play</button>
+            <button class="play" onclick="redirect()">Play</button>
         </div>
     </main>
-
-    </body>
+    <script>
+        function redirect() {
+            window.location.href='game.html';
+        }
+    </script>
+</body>
 </html>
