--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
 
         </div>
         <div class="lost">
-            <h1 >Your score was <h1 class="score">30</h1></h1>
+            <h1 >Your score was <h1 class="score"></h1></h1>
             <button class="play" onclick="playAgain()">Play again</button>
         </div>
     </div>
@@ -56,9 +56,9 @@
         var tries = 0;
         var randomIndex = 0;
 
-        function menu() {
+        window.menu = function() {
             window.location.href = 'index.html';
-        }
+        };
 
         async function loadAllCards() {
             cardSet = await getAllCards();
@@ -123,6 +123,7 @@
 
         // Verify answer
         window.isCorrect = function() {
+            console.log("Score before:", score);
             if (searchBar.value.toLowerCase() == cardSet.data[randomIndex].name.toLowerCase()) {
                 score += 10 - tries > 1 ? 10 - tries : 1;
                 tries = 0;
@@ -135,10 +136,12 @@
 
             if (tries > 20) {
                 let scoreValue = document.querySelector(".score");
-                scoreValue.value = score;
+                scoreValue.innerText = score;
                 lost.style.display = "flex";
                 gameContainer.style.display = "none";
             }
+
+            console.log("Score after:", score);
         }
 
     </script>
