--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="page-content">
-        <div class="menu">
+        <div class="menu-container">
             <button class="play menu" onclick="menu()">Menu</button>
         </div>
         <div class="game">
@@ -34,8 +34,8 @@
 
         </div>
         <div class="lost">
-            <h1 >Your score was <h1 class="score"></h1></h1>
-            <button class="play" onclick="playAgain()">Play again</button>
+            <h1 class="scoreText" >Your score was <h1 class="score"></h1></h1>
+            <button class="play playAgain" onclick="playAgain()">Play again</button>
         </div>
     </div>
 
@@ -43,19 +43,60 @@
         import config from '../config/config.js';
         import getImage from '../service/APIAuth.js'; 
         import getAllCards from '../service/APIAllCards.js'; 
+        import textsES from "../config/translationsES.js";
+        import textsEN from "../config/translationsEN.js";
 
         console.log("API URL:", config.API_URL);  
+        // Get language 
+        const urlParams = new URLSearchParams(window.location.search);
+        const language = urlParams.get('lang'); 
 
+        // Global variables 
         var indexes = [];
-        var menuBtn = document.querySelector(".menu");
-        var cardImg = document.querySelector(".pokémon-tcg-card");
-        var searchBar = document.querySelector(".search-bar");
-        var lost = document.querySelector(".lost");
-        var gameContainer = document.querySelector(".game");
         var cardSet;
         var score = 0;
         var tries = 0;
         var randomIndex = 0;
+
+
+        // Load page elements
+        var menuBtn = document.querySelector(".menu");
+        var title = document.querySelector(".title");
+        var sendBtn = document.querySelector(".send");
+        var scoreText = document.querySelector(".scoreText");
+        var cardImg = document.querySelector(".pokémon-tcg-card");
+        var searchBar = document.querySelector(".search-bar");
+        var lost = document.querySelector(".lost");
+        var gameContainer = document.querySelector(".game");
+
+        // Translate
+        document.addEventListener('DOMContentLoaded', (event) => {
+            if (language == "ES") {
+                translationES();
+            } else {
+                translationEN();
+            }
+        });
+
+
+        window.translationES = function() {
+            menuBtn.innerText = textsES.menuBtn;
+            title.innerText = textsES.titleGame;
+            searchBar.placeholder = textsES.searchBarPlaceholder;
+            sendBtn.innerText = textsES.sendBtn;
+            scoreText.innerText = textsES.scoreText;
+            document.querySelector(".playAgain") = textsES.playAgain;
+        }
+
+        window.translationEN = function() {
+            menuBtn.innerText = textsEN.menuBtn;
+            title.innerText = textsEN.titleGame;
+            searchBar.placeholder = textsEN.searchBarPlaceholder;
+            sendBtn.innerText = textsEN.sendBtn;
+            scoreText.innerText = textsEN.scoreText;
+            document.querySelector(".playAgain").innerText = textsEN.playAgain;
+        }
+
 
         window.menu = function() {
             window.location.href = 'index.html';
