--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <main>
         <div class="flags">
-            <button class="languages" onclick="translateEN()"><img style="height: 120px" src="https://img.icons8.com/?size=100&id=15532&format=png&color=000000" alt="English"></button>
-            <button class="languages" onclick="translateES()"><img src="https://img.icons8.com/?size=100&id=18099&format=png&color=000000" alt="Spanish"></button>    
+            <button class="languages" onclick="translateEN()"><img src="https://flagicons.lipis.dev/flags/4x3/us.svg" alt="English"></button>
+            <button class="languages" onclick="translateES()"><img src="https://flagicons.lipis.dev/flags/4x3/es.svg" alt="Spanish"></button>    
         </div>
         <div class="game-info">
             <h1 class="title">How to play?</h1>
