feat Send answer when the user press the space bar

--- a/game.html
+++ b/game.html
@@ -203,6 +203,15 @@
             console.log("Score after:", score);
         }
 
+        // Send answer when the user press the space bar
+        document.getElementById("searchInput").addEventListener("keypress", function(event) {
+            if (event.key === "Enter") {  
+                event.preventDefault(); 
+                isCorrect(); 
+            }
+        });
+
+
     </script>
 </body>
 </html>
