--- a/game.html
+++ b/game.html
@@ -174,6 +174,7 @@
             tries = 0;
             lost.style.display = "none";
             gameContainer.style.display = "block";
+            newLevel();
         }
 
         // Verify answer
